Bug 433005 - Cannot unselect entry list view columns in BibLaTeX mode
Summary: Cannot unselect entry list view columns in BibLaTeX mode
Status: RESOLVED FIXED
Alias: None
Product: KBibTeX
Classification: Applications
Component: User interface (other bugs)
Version First Reported In: 0.9.2
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: Thomas Fischer
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-02-16 11:42 UTC by Erik Quaeghebeur
Modified: 2021-12-11 13:52 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.10
Sentry Crash Report:


Attachments
Screenshot of KBibTeX column selection (269.54 KB, image/png)
2021-02-16 11:43 UTC, Erik Quaeghebeur
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Erik Quaeghebeur 2021-02-16 11:42:15 UTC
SUMMARY
I installed KBiBTeX on a new computer. When selecting BibLaTeX mode, it is not possible for me to unselect a large number of columns. In BibTeX mode this is not a problem. On another computer, with the same version of KBibTeX, this is not an issue. (But it may be that the column selection was carried over from an earlier KBibTeX version, so that it is not hitting the same issue.)

I'll attach a screenshot illustrating the issue.


SOFTWARE/OS VERSIONS
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 5.20.5
KDE Frameworks Version: 5.77.0
Qt Version: 5.15.2
Comment 1 Erik Quaeghebeur 2021-02-16 11:43:37 UTC
Created attachment 135717 [details]
Screenshot of KBibTeX column selection

Screenshot showing the problem of stuck columns. The first set of columns can be selected/deselected. However, the large group of selected columns at the end cannot be deselected.
Comment 2 Thomas Fischer 2021-02-21 22:07:29 UTC
Yes, I can confirm this problem. The issue stems from that, on a fresh KBibTeX installation, the visibility settings for those many BibLaTeX columns are not set and the default settings (making all columns invisible except for a few important ones) did not get applied.

I think I have fixed this issue by triggering a reload of column properties (including applying defaults if no user exists yet exist) when the bibliography system changes (e.g. from BibTeX to BibLaTeX).
For now, I have commited the fix in a private repository. Please check and confirm if that fixes the problem for you:

https://invent.kde.org/thomasfischer/kbibtex/commit/6dacc13c664631b8cc6bef62072cca3a1af32749
Comment 3 Erik Quaeghebeur 2021-02-22 09:29:48 UTC
Is it possible to provide a patch against 0.9.2? That would make it easy for me to check.
Comment 4 Thomas Fischer 2021-02-22 20:24:14 UTC
(In reply to Erik Quaeghebeur from comment #3)
> Is it possible to provide a patch against 0.9.2? That would make it easy for
> me to check.


As 0.10 is about to be released, I don't plan to make any further releases of 0.9.x. To know that the problem is fixed in 0.10, better test it there, too.

If compiling source code in general is not a problem, you can follow this guide which should be almost pain-free to test a more recent KBibTeX version:

https://userbase.kde.org/KBibTeX/Development#Quick_Start_to_Run_KBibTeX_from_Git

Once you have fetched run-kbibtex.sh, you can invoke it like this (all in one line) and everything else should happen automagically:

bash run-kbibtex.sh 'https://invent.kde.org/thomasfischer/kbibtex.git' 'bugs/kde433005'

All files including configuration files will be placed in /tmp, so it should not interfere with your regular 0.9.2 installation.
Comment 5 Erik Quaeghebeur 2021-02-23 09:42:54 UTC
(In reply to Thomas Fischer from comment #4)
> If compiling source code in general is not a problem, you can follow this
> guide which should be almost pain-free to test a more recent KBibTeX version:
> 
> https://userbase.kde.org/KBibTeX/
> Development#Quick_Start_to_Run_KBibTeX_from_Git
> 
> Once you have fetched run-kbibtex.sh, you can invoke it like this (all in
> one line) and everything else should happen automagically:
> 
> bash run-kbibtex.sh 'https://invent.kde.org/thomasfischer/kbibtex.git'
> 'bugs/kde433005'
That is a great way to test patched versions! (I did have to remove valgrind from the required applications.)

I can confirm that this patched version fixes the issue I have with 0.9.2. I leave it to you to close this, once the patch has been integrated.

I'm looking forward to a release including this fix.
Comment 6 Thomas Fischer 2021-02-23 22:29:02 UTC
> > bash run-kbibtex.sh 'https://invent.kde.org/thomasfischer/kbibtex.git'
> > 'bugs/kde433005'
> That is a great way to test patched versions! (I did have to remove valgrind
> from the required applications.)
I am surprised you did not know that. I was quite sure I had mentioned that in one of your earlier bug reports. As you are at it, can you please continue using this version to test the upcoming 0.10 release? Just file a new bug report if you encounter a bug.

> I can confirm that this patched version fixes the issue I have with 0.9.2. I
> leave it to you to close this, once the patch has been integrated.
Yes, I will do so.

> I'm looking forward to a release including this fix.
Me, too. Thank you for your input!
Comment 7 Thomas Fischer 2021-02-27 18:21:31 UTC
Git commit 5611bc9aba56d7bc91bf81cf7f3ec25379f0ce95 by Thomas Fischer.
Committed on 27/02/2021 at 18:21.
Pushed by thomasfischer into branch 'kbibtex/0.10'.

Reload column properties on bibliography system changes

Reload column properties (e.g. visiblity) in the bibliography list views
when the bibliography system changes, for example from BibTeX to
BibLaTeX.
FIXED-IN: 0.10

M  +1    -0    ChangeLog
M  +2    -3    src/data/models/filemodel.cpp
M  +4    -1    src/data/models/filemodel.h
M  +14   -1    src/gui/file/basicfileview.cpp

https://invent.kde.org/office/kbibtex/commit/5611bc9aba56d7bc91bf81cf7f3ec25379f0ce95
Comment 8 Thomas Fischer 2021-12-11 13:52:14 UTC
Git commit 9843e1d574e421a84c299784d6d7821bfe57923b by Thomas Fischer.
Committed on 07/11/2021 at 20:21.
Pushed by thomasfischer into branch 'master'.

Reload column properties on bibliography system changes

Reload column properties (e.g. visiblity) in the bibliography list views
when the bibliography system changes, for example from BibTeX to
BibLaTeX.

This commit is a forward-port of commit 5611bc9aba56d7bc9 from branch
'kbibtex/0.10'.

M  +1    -0    ChangeLog
M  +2    -1    src/data/models/filemodel.cpp
M  +4    -1    src/data/models/filemodel.h
M  +13   -0    src/gui/file/basicfileview.cpp

https://invent.kde.org/office/kbibtex/commit/9843e1d574e421a84c299784d6d7821bfe57923b