Reload column properties on bibliography system changes

Reload column properties (e.g. visiblity) in the bibliography list views
when the bibliography system changes, for example from BibTeX to
BibLaTeX.

BUG: 433005
FIXED-IN: 0.10